<resources>
    <string name="app_name">TaPlans</string>
    <string name="gcp_client_id">AD:85:A5:5A:B4:7B:74:24:4A:61:B1:55:4B:20:09:A7:AE:F2:F2:3E</string>
    <!--    <string name="gcp_client_id">5A:D9:76:C6:5F:4E:28:4F:CB:15:35:3D:FA:9D:F0:6D:3E:9A:E9:EC</string>-->
    <!--    <string name="gcp_client_id">229798352400-f9j97lpasjgiejofn90i634igi3eura2.apps.googleusercontent.com</string>-->
    <string name="gcp_api_key">AIzaSyB4Q2PlDNyb0j1fZNGSy_9mU2hX5j5jWnQ</string>
    <string name="gcp_Project">TaPlan12451000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="permission_titol">設定データの保存</string>
    <string name="permission_msg">チェックした予定を端末に保持します</string>


    <string name="comm_time">時刻</string>
    <string name="comm_sunday">日</string>
    <string name="comm_monday">月</string>
    <string name="comm_tuesday">火</string>
    <string name="comm_wednesday">水</string>
    <string name="comm_thursday">木</string>
    <string name="comm_friday">金</string>
    <string name="comm_saturday">土</string>
    <string name="comm_holiday">祝日</string>

    <string name="action_settings">設定</string>
    <string name="action_quit">終了</string>

    <string name="menu_home">カレンダー</string>
    <string name="menu_gallery">Googleカレンダーの登録状況</string>
    <string name="menu_target_setting">対象予定</string>
    <string name="menu_other_setting">対象予定以外の日</string>

    <string name="pref_calender_account">登録するカレンダーのアカウント</string>
    <string name="pref_view_setting">画面設定</string>
    <string name="pref_sunday_text_color">日曜、祝日の文字色</string>
    <string name="pref_sunday_background">日曜、祝日の背景色</string>
    <string name="pref_satuday_text_color">土曜日の文字色</string>
    <string name="pref_satuday_background">土曜日の背景色</string>
    <string name="pref_default_text_color">規定の文字色</string>
    <string name="pref_default_background">規定の背景色</string>
    <string name="pref_set_default">規定値に戻す</string>
    <string name="pref_tDates">対象日リスト</string>

    <string name="sunday_background">#FFFDE7E7</string>
    <string name="sunday_text_color">#FFFF0000</string>
    <string name="satuday_background">#FFEDEDFF</string>
    <string name="satuday_text_color">#FF0000FF</string>
    <string name="default_background">#FFFFFFFF</string>
    <string name="default_text_color">#FF000000</string>
    <string name="colorPrimary">#FF3700B3</string>

    <string name="sett_alarm_time">アラーム時刻</string>
    <string name="sett_event_name">予定の名称</string>
    <string name="set_alarm_sound">アラーム音</string>
    <string name="set_sequential_updates">逐次更新</string>

    <string name="gcc_base">カレンダーの色</string>
    <string name="gcc_lavender">ラベンダー</string>   <!-- 1	●ラベンダー	#7986CB	rgb(121, 134, 203)-->
    <string name="gcc_sage">セージ</string>           <!-- 2	●セージ	#33B679	rgb(51, 182, 121)-->
    <string name="gcc_grapes">ブドウ</string>           <!-- 3	●ブドウ	#8E24AA	rgb(142, 36, 170)-->
    <string name="gcc_flamingo">フラミンゴ</string>     <!-- 4	●フラミンゴ	#E67C73	rgb(230, 124, 115)-->
    <string name="gcc_banana">バナナ</string>     <!-- 5	●バナナ	#F6BF26	rgb(246, 191, 38)-->
    <string name="gcc_orange">ミカン</string>     <!-- 6	●ミカン	#F4511E	rgb(244, 81, 30)-->
    <string name="gcc_peacock">ピーコック</string>     <!-- 7	●ピーコック	#039BE5	rgb(3, 155, 229)-->
    <string name="gcc_graphite">グラファイト</string>     <!-- 8	●グラファイト	#616161	rgb(97, 97, 97)-->
    <string name="gcc_blueberry">ブルーベリー</string>     <!-- 9	●ブルーベリー	#3F51B5	rgb(63, 81, 181)-->
    <string name="gcc_basil">バジル</string>     <!-- 10	●バジル	#0B8043	rgb(11, 128, 67)-->
    <string name="gcc_tomato">トマト</string>

    <string name="google_calendar_integration">Googleカレンダー連携</string>
    <string name="gc_subject">予定の名前</string>
    <string name="gca_subject_hint">未設定なら予定の名称と同じ</string>
    <string name="gc_enddate">終日</string>
    <string name="gc_description">説明・メモ</string>
    <string name="gc_description_hint">持参品など</string>
    <string name="gc_location">予定の場所</string>
    <string name="gc_location_hint">住所表記</string>
    <string name="gc_color">予定の色</string>
    <string name="gc_isPrivate">予定を限定公開にする</string>
    <string name="menu_alarm_list">本日以降の起床時刻</string>
    <string name="common_time">common_time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sb_failure_google_signin">Googleログインに失敗しました</string>     <!-- 11	●トマト	#D50000	rgb(213, 0, 0)-->

</resources>