<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="your@gmail.com"
        android:key="calendar_account"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_calender_account" />
    <PreferenceCategory android:title="@string/pref_view_setting">
        <EditTextPreference
            android:background="@color/sunday_background"
            android:defaultValue="#FDE7E7"
            android:key="sundayBackground"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/sunday_text_color"
            android:title="@string/pref_sunday_background" />
        <EditTextPreference
            android:background="@color/sunday_background"
            android:defaultValue="#ff0000"
            android:key="sundayTextColor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/sunday_text_color"
            android:title="@string/pref_sunday_text_color" />
        <EditTextPreference
            android:background="@color/satuday_background"
            android:defaultValue="#EDEDFF"
            android:key="satudayBackground"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/satuday_text_color"
            android:title="@string/pref_satuday_background" />
        <EditTextPreference
            android:background="@color/satuday_background"
            android:defaultValue="#0000FF"
            android:key="satudayTextColor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/satuday_text_color"
            android:title="@string/pref_satuday_text_color" />
        <EditTextPreference
            android:background="@color/default_background"
            android:defaultValue="#FFFFFF"
            android:key="defaultBackground"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/default_text_color"
            android:title="@string/pref_default_background" />
        <EditTextPreference
            android:background="@color/default_background"
            android:defaultValue="#000000"
            android:key="defaultTextColor"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/default_text_color"
            android:title="@string/pref_default_text_color" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="set_default"
            android:title="@string/pref_set_default" />
    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue=""
        android:key="targetDays"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="対象日" />
    <!--    <ListPreference-->
    <!--        android:defaultValue="1"-->
    <!--        android:entries="@android:array/postalAddressTypes"-->
    <!--        android:entryValues="@android:array/postalAddressTypes"-->
    <!--        android:key="tDates"-->
    <!--        android:title="@string/pref_tDates"-->
    <!--        />-->
    <!--    * 前後2か月の対象日リスト：Googleカレンダー非連動時の対策-->
</PreferenceScreen>