<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hijiyam_koubou.taplans.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hijiyam_koubou.taplans.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_other_setting"
        android:name="com.hijiyam_koubou.taplans.ui.other_setting.OtherSettingFragment"
        android:label="@string/menu_other_setting"
        tools:layout="@layout/fragment_other_setting" />

</navigation>

    <!--    <fragment-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:name="com.hijiyam_koubou.taplans.ui.slideshow.SlideshowFragment"-->
    <!--        android:label="@string/menu_slideshow"-->
    <!--        tools:layout="@layout/fragment_slideshow" />-->

