<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.target_setting.TargetPlanFragment"
    >
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/sett_event_name" />

            <EditText
                android:id="@+id/tEventNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/set_alarm_sound" />

            <Spinner
                android:id="@+id/tEventSoundSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="4" />

            <ImageButton
                android:id="@+id/tSoundPlayBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:drawable/ic_lock_silent_mode_off" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/sett_alarm_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="1;" />

            <Button
                android:id="@+id/tArarmTime1BT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <!--            <EditText-->
            <!--                android:id="@+id/tArarmTime1Et"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:inputType="time"-->
            <!--                android:hint="06:00"-->
            <!--                />-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_span="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ta100cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_sunday" />

                <CheckBox
                    android:id="@+id/ta101cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_monday" />

                <CheckBox
                    android:id="@+id/ta102cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_tuesday" />

                <CheckBox
                    android:id="@+id/ta103cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_wednesday" />

                <CheckBox
                    android:id="@+id/ta104cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_thursday" />

                <CheckBox
                    android:id="@+id/ta105cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_friday" />

                <CheckBox
                    android:id="@+id/ta106cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_saturday" />

                <CheckBox
                    android:id="@+id/ta107cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_holiday"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/sett_alarm_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="2;" />

            <Button
                android:id="@+id/tArarmTime2BT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_span="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ta200cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_sunday" />

                <CheckBox
                    android:id="@+id/ta201cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_monday" />

                <CheckBox
                    android:id="@+id/ta202cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_tuesday" />

                <CheckBox
                    android:id="@+id/ta203cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_wednesday" />

                <CheckBox
                    android:id="@+id/ta204cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_thursday" />

                <CheckBox
                    android:id="@+id/ta205cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_friday" />

                <CheckBox
                    android:id="@+id/ta206cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_saturday" />

                <CheckBox
                    android:id="@+id/ta207cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_holiday"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/sett_alarm_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="3;" />

            <Button
                android:id="@+id/tArarmTime3BT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_span="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ta300cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_sunday" />

                <CheckBox
                    android:id="@+id/ta301cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_monday" />

                <CheckBox
                    android:id="@+id/ta302cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_tuesday" />

                <CheckBox
                    android:id="@+id/ta303cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_wednesday" />

                <CheckBox
                    android:id="@+id/ta304cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_thursday" />

                <CheckBox
                    android:id="@+id/ta305cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_friday" />

                <CheckBox
                    android:id="@+id/ta306cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_saturday" />

                <CheckBox
                    android:id="@+id/ta307cBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comm_holiday"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFCC80">

            <Switch
                android:id="@+id/google_cal_alignmentSW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="3"
                android:text="@string/google_calendar_integration" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/gc_subject" />

            <EditText
                android:id="@+id/gca_subjectET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gca_subject_hint"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/comm_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/gca_starttimeBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="08；00" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="～" />
                <Button
                    android:id="@+id/gca_endtimeBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17；00" />
                <Switch
                    android:id="@+id/gca_enddateSW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/gc_enddate" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/gc_description" />

            <EditText
                android:id="@+id/gca_descriptionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gc_description_hint"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/gc_location" />

            <EditText
                android:id="@+id/gca_locationET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gc_location_hint"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_span="2"
                android:text="@string/gc_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/gca_colorIdSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    />


                <CheckBox
                    android:id="@+id/gca_isPrivateCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gc_isPrivate"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>
    <!--    </ScrollView>-->

    <TextView
        android:id="@+id/text_target_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        />


</LinearLayout>
